feat(index): change title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Retro Blinking NO</title>
+    <title>Is this important thing done yet?</title>
     <style>
       body {
         font-family: 'Comic Sans MS', 'Trebuchet MS', sans-serif; /* classic 90s font */
