chore(index): remove comments

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Is this important thing done yet?</title>
     <style>
       body {
-        font-family: 'Comic Sans MS', 'Trebuchet MS', sans-serif; /* classic 90s font */
+        font-family: 'Comic Sans MS', 'Trebuchet MS', sans-serif;
         background-color: #008080;
         color: white;
         font-size: 24px;
@@ -34,7 +34,7 @@
       document.getElementById('dateDisplay').innerHTML = dateString
     }
 
-    setInterval(updateDateTime, 1000) // Update the date and time every second
-    updateDateTime() // Update the date and time immediately
+    setInterval(updateDateTime, 1000)
+    updateDateTime()
   </script>
 </html>
